NOJIRA: Oppgradert til Java 16 og nyeste dependencies