@@ -1,4 +1,4 @@
-FROM navikt/java:15-appdynamics
+FROM navikt/java:16-appdynamics
 ENV APPD_ENABLED=false
 ENV APP_NAME=fpabonnent
 ENV APPDYNAMICS_CONTROLLER_HOST_NAME=appdynamics.adeo.no
@@ -18,4 +18,4 @@ COPY web/target/lib/*.jar /app/lib/
 
 # Export vault properties
 COPY export-vault.sh /init-scripts/export-vault.sh
-ENV JAVA_OPTS="-XX:MaxRAMPercentage=75.0 -Djava.security.egd=file:/dev/./urandom -Duser.timezone=Europe/Oslo -Dapplication.name=FPABONNENT "
+ENV JAVA_OPTS="-XX:MaxRAMPercentage=75.0 -Djava.security.egd=file:/dev/./urandom -Duser.timezone=Europe/Oslo -Dapplication.name=FPABONNENT --illegal-access=permit "
